Added a ping route for health checking
